2001-07-07  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-compute-counters): Don't count the header entry.
	Reported by Bernd Schandl.

2001-07-01  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-content-type-charset-alist): Add entries for
	ISO-8859-15, GB2312, EUC-JP, EUC-KR, BIG5, SHIFT_JIS, TIS-620, VISCII.

2001-07-02  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-validate): Use private 'compile-command' and buffer
	name for validation output.

2001-07-01  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode): Use add-hook to call po-replace-revision-date
	saving the buffer.
	(po-quit): Don't call po-replace-revision-date.
	(po-validate): Likewise.
	Proposed by Bernd Schandl.

	(po-auto-replace-revision-date): Change default to 't'; otherwise the
	user will be asked too often.

2001-06-25  Bruno Haible  <haible@clisp.cons.org>

	* po-mode.el (po-find-file-coding-system): Make it work in XEmacs 20
	as well. Based on a patch by Enrico Scholz
	<enrico.scholz@informatik.tu-chemnitz.de>.

2001-06-04  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-edit-string): Set 'buffer-file-coding-system'
	(for hints thanks to Eli Zaretskii).

2001-06-04  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-msgfmt-version-check): New. Check for GNU gettext
	0.10.36 or newer. Re-written by Stefan Monnier.
	(po-validate): Use 'po-msgfmt-version-check'.
	(po-validate): Use 'null-device' instead of literal "/dev/null".
	Reported by Eli Zaretskii.

2001-05-23  Bruno Haible  <haible@clisp.cons.org>

	* gettext-0.10.38 released.

2001-05-22  Bruno Haible  <haible@clisp.cons.org>

	* gettextize.in: Copy plural.c and touch it afterwards.

2001-05-21  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* gettextize.in: Check for configure.ac in addition to configure.in.

2001-05-12  Paul Eggert  <eggert@twinsun.com>

	* gettextize.in: Replace "test -e" with "test -f", since the 'test'
	builtin of Solaris 8 /bin/sh doesn't grok "test -e".
